--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -3,13 +3,15 @@
 
 body {
     font-family: sans-serif;
-    margin: 0;
+    margin-top: 100px;
     padding: 20px;
-    
-    background-image: linear-gradient(to right, rgba(87, 67, 146, 1), rgba(150, 98, 146, 1));
+    background-image: linear-gradient(to right, pink, purple);
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
+    display: flex;
+    display: flex;
+    flex-direction: column;
 }
 
 .login-box {
@@ -18,18 +20,11 @@ body {
 	background-color: #fff;
 	border-radius: 10px;
 	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-	margin: 100px auto;
+	margin: 50px auto;
 	padding: 20px;
+	flex:1;
 }
-.login-image{
-	width: 400px;
-	height: 300px;
-	background-color: #fff;
-	border-radius: 10px;
-	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-	margin: 100px auto;
-	padding: 20px;
-}
+
 
 h2 {
     text-align: center;
@@ -66,7 +61,6 @@ button {
     background-color: #4CAF50;
     color: white;
     padding: 10px 20px;
-    margin-top:10px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
