--- a/src/main/webapp/css/register.css
+++ b/src/main/webapp/css/register.css
@@ -5,29 +5,31 @@ body {
     font-family: sans-serif;
     margin: 0;
     padding: 20px;
+    margin-top: 100px;
     background-image: linear-gradient(to right, pink, purple);
     background-size: cover;
     background-repeat: no-repeat;
-   /* height: 100vh;
+  	height: 90vh;
     display: flex;
-    align-items: center;
-    justify-content: flex-start;*/
+    flex-direction: column;
+  	
+  
+ 
+
 }
 
-.container1 {
+.container {
     background-color: white;
     padding: 30px;
     margin-right:100px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    height: 40vh;
+    width: 30vw;
+    flex: 1;
+  
 }
-.container2 {
-    background-color: white;
-    padding: 30px;
-    margin-right:100px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
+
 
 h1 {
     text-align: center;
