--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -2,17 +2,17 @@
 @charset "ISO-8859-1";
 
 body {
-    font-family: sans-serif;
-    margin-top: 100px;
-    padding: 20px;
-    background-image: linear-gradient(to right, pink, purple);
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 100vh;
-    display: flex;
-    display: flex;
-    flex-direction: column;
+  font-family: sans-serif;
+  margin: 0; /* Reset default margin */
+  padding: 0; /* Reset default padding */
+  background-image: linear-gradient(to right, pink, purple);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
+
 
 .login-box {
 	width: 400px;
@@ -20,7 +20,7 @@ body {
 	background-color: #fff;
 	border-radius: 10px;
 	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-	margin: 50px auto;
+	margin: 100px auto;
 	padding: 20px;
 	flex:1;
 }
