--- a/src/main/webapp/css/profile.css
+++ b/src/main/webapp/css/profile.css
@@ -21,6 +21,7 @@ body{
 .profile-header {
     display: flex;
     margin-left: 15px;
+    padding: 20px;
 }
 
 .profile-img {
@@ -32,11 +33,14 @@ body{
 
 .profile-text-container {
     line-height: 0.5;
+    padding-top: 10px;
 }
 
 .profile-title {
     font-family: sans-serif;
     font-size: 20px;
+    padding-top: 20px; 
+    
 }
 
 .profile-email {
@@ -56,25 +60,35 @@ body{
     padding: 10px;
     margin: 10px;
     border-radius: 10px;
+    transition: background-color 0.3s, color 0.3s; /* Smooth transition */
 }
 
 .menu-icon {
     margin-right: 10px;
 }
 
-.menu-link:first-child {
+.menu-link.active {
     color: aliceblue;
     background-color: aquamarine;
 }
 
+.logout-button{
+	background-color: FF7233;
+	color: FF7233;
+}
 .menu-link:hover {
     background-color: blueviolet;
     color: darkcyan;
 }
 
-.menu-link:first-child:hover {
-    background-color: aquamarine;
-    color: antiquewhite;
+.change-password-form{
+	flex: 2;
+    justify-content: space-between;
+    margin-left: 10px;
+    background-color: antiquewhite;
+    box-shadow: black 0px 1px 4px;
+    border-radius: 5px;
+    height: max-content;
 }
 
 .account {
@@ -86,6 +100,7 @@ body{
     border-radius: 5px;
     height: max-content;
 }
+
 
 .account-header {
     display: flex;
@@ -139,6 +154,7 @@ body{
     box-shadow: black;
 }
 
+
 .btn-save:hover {
     background-color: blue;
 }
@@ -160,17 +176,33 @@ body{
     font-family: sans-serif;
     color: steelblue;
     font-size: 14px;
+    margin-bottom: 5px;
 }
 
-.input-container input {
-    height: 25px;
-    border: 1.5px solid;
+input, select {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
     border-radius: 5px;
-    padding: 5px;
+    box-sizing: border-box;
+}
+
+select {
+    appearance: none;
+}
+.input-container input,select {
+    width: 100%;
+    padding: 10px;
+    border: 1.5px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    height: 25px;
     color: rgb(0, 0, 0);
     font-family: sans-serif;
 }
-
+select {
+    appearance: none;
+}
 .input-container input:focus {
     outline: none;
     border: 1.5px solid;
@@ -190,3 +222,5 @@ body{
     outline: none;
     border: 1.5px solid;
 }
+
+.
