--- a/src/main/webapp/css/profile.css
+++ b/src/main/webapp/css/profile.css
@@ -1,226 +1,229 @@
 @charset "UTF-8";
-body{
-    background-color: ; /* eta bg color rakhni body ko*/
+
+body {
+	background-color:; /* eta bg color rakhni body ko*/
 }
 
 .container {
-    display: flex;
-    margin: 150px 10px;
-
+	display: flex;
+	margin: 150px 10px;
 }
 
 .profile {
-    flex: 1;
-    margin-right: 10px;
-    background-color: ; /* eta bg color rakhni profile ko*/
-    box-shadow: black 0px 1px 4px;
-    border-radius: 5px;
-    height: max-content;
+	flex: 1;
+	margin-right: 10px;
+	background-color:; /* eta bg color rakhni profile ko*/
+	box-shadow: black 0px 1px 4px;
+	border-radius: 5px;
+	height: max-content;
 }
 
 .profile-header {
-    display: flex;
-    margin-left: 15px;
-    padding: 20px;
+	display: flex;
+	margin-left: 15px;
+	padding: 20px;
 }
 
 .profile-img {
-    width: 60px;
-    height: 60px;
-    border-radius: 10px;
-    margin: 10px;
+	width: 60px;
+	height: 60px;
+	border-radius: 10px;
+	margin: 10px;
 }
 
 .profile-text-container {
-    line-height: 0.5;
-    padding-top: 10px;
+	line-height: 0.5;
+	padding-top: 10px;
 }
 
 .profile-title {
-    font-family: sans-serif;
-    font-size: 20px;
-    padding-top: 20px; 
-    
+	font-family: sans-serif;
+	font-size: 20px;
+	padding-top: 20px;
 }
 
 .profile-email {
-    font-family: sans-serif;
-    font-size: 14px;
+	font-family: sans-serif;
+	font-size: 14px;
 }
 
 .menu {
-    margin: 0 20 px;
+	margin: 0 20 px;
 }
 
 .menu-link {
-    display: block;
-    text-decoration: none;
-    color: cadetblue;
-    font-family: sans-serif;
-    padding: 10px;
-    margin: 10px;
-    border-radius: 10px;
-    transition: background-color 0.3s, color 0.3s; /* Smooth transition */
+	display: block;
+	text-decoration: none;
+	color: cadetblue;
+	font-family: sans-serif;
+	padding: 10px;
+	margin: 10px;
+	border-radius: 10px;
+	transition: background-color 0.3s, color 0.3s; /* Smooth transition */
 }
 
 .menu-icon {
-    margin-right: 10px;
+	margin-right: 10px;
 }
 
 .menu-link.active {
-    color: aliceblue;
-    background-color: aquamarine;
+	color: aliceblue;
+	background-color: aquamarine;
 }
 
-.logout-button{
+.logout-button {
 	background-color: FF7233;
 	color: FF7233;
 }
+
 .menu-link:hover {
-    background-color: blueviolet;
-    color: darkcyan;
+	background-color: blueviolet;
+	color: darkcyan;
 }
 
-.change-password-form{
+.change-password-form {
 	flex: 2;
-    justify-content: space-between;
-    margin-left: 10px;
-    background-color: antiquewhite;
-    box-shadow: black 0px 1px 4px;
-    border-radius: 5px;
-    height: max-content;
+	justify-content: space-between;
+	margin-left: 10px;
+	background-color: antiquewhite;
+	box-shadow: black 0px 1px 4px;
+	border-radius: 5px;
+	height: max-content;
 }
 
 .account {
-    flex: 2;
-    justify-content: space-between;
-    margin-left: 10px;
-    background-color: antiquewhite;
-    box-shadow: black 0px 1px 4px;
-    border-radius: 5px;
-    height: max-content;
+	flex: 2;
+	justify-content: space-between;
+	margin-left: 10px;
+	background-color: antiquewhite;
+	box-shadow: black 0px 1px 4px;
+	border-radius: 5px;
+	height: max-content;
 }
 
-
 .account-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    border-bottom: 1px solid;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 10px;
+	border-bottom: 1px solid;
 }
 
 .account-title {
-    font-family: sans-serif;
-    font-size: 20px;
-    color: cadetblue;
-    font-weight: 500;
-    margin-left: 10px;
+	font-family: sans-serif;
+	font-size: 20px;
+	color: cadetblue;
+	font-weight: 500;
+	margin-left: 10px;
 }
 
 .btn-container {
-    margin-right: 5px;
+	margin-right: 5px;
 }
 
 .btn-cancel {
-    width: 8em;
-    height: 3em;
-    cursor: pointer;
-    border: 1px solid;
-    border-radius: 2cm;
-    color: burlywood;
-    font-weight: bold;
-    margin-right: 5px;
-    background-color: antiquewhite;
-    transition-duration: 0.3s;
-    box-shadow: black;
+	width: 8em;
+	height: 3em;
+	cursor: pointer;
+	border: 1px solid;
+	border-radius: 2cm;
+	color: burlywood;
+	font-weight: bold;
+	margin-right: 5px;
+	background-color: antiquewhite;
+	transition-duration: 0.3s;
+	box-shadow: black;
 }
 
 .btn-cancel:hover {
-    background-color: antiquewhite;
+	background-color: antiquewhite;
 }
 
 .btn-save {
-    width: 8em;
-    height: 3em;
-    cursor: pointer;
-    border: 1px solid;
-    border-radius: 2cm;
-    color: burlywood;
-    font-weight: bold;
-    margin-left: 5px;
-    background-color: rgb(42, 41, 40);
-    transition-duration: 0.3s;
-    box-shadow: black;
+	width: 8em;
+	height: 3em;
+	cursor: pointer;
+	border: 1px solid;
+	border-radius: 2cm;
+	color: burlywood;
+	font-weight: bold;
+	margin-left: 5px;
+	background-color: rgb(42, 41, 40);
+	transition-duration: 0.3s;
+	box-shadow: black;
 }
 
-
 .btn-save:hover {
-    background-color: blue;
+	background-color: blue;
 }
 
 .account-edit {
-    display: flex;
-    justify-content: space-between;
-    margin: 15px 0;
+	display: flex;
+	justify-content: space-between;
+	margin: 15px 0;
 }
 
 .input-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    margin: 0 20px;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	margin: 0 20px;
 }
 
 .input-container label {
-    font-family: sans-serif;
-    color: steelblue;
-    font-size: 14px;
-    margin-bottom: 5px;
+	font-family: sans-serif;
+	color: steelblue;
+	font-size: 14px;
+	margin-bottom: 5px;
 }
 
 input, select {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing: border-box;
+	width: 100%;
+	padding: 10px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	box-sizing: border-box;
 }
 
 select {
-    appearance: none;
+	appearance: none;
 }
-.input-container input,select {
-    width: 100%;
-    padding: 10px;
-    border: 1.5px solid #ccc;
-    border-radius: 5px;
-    box-sizing: border-box;
-    height: 25px;
-    color: rgb(0, 0, 0);
-    font-family: sans-serif;
+
+.input-container input, .input-container select {
+	width: 100%;
+	padding: 15px; /* Increased padding for a taller field */
+	border: 1.5px solid #ccc;
+	border-radius: 5px;
+	box-sizing: border-box;
+	height: 45px; /* Increased height */
+	color: rgb(0, 0, 0);
+	font-family: sans-serif;
+	font-size: 16px; /* Increased font size */
+	line-height: 1.5; /* Increased line height */
 }
-select {
-    appearance: none;
+
+.input-container select {
+	appearance: none; /* Ensures consistent styling across browsers */
 }
+
 .input-container input:focus {
-    outline: none;
-    border: 1.5px solid;
+	outline: none;
+	border: 1.5px solid;
 }
 
 .input-container textarea {
-    display: block;
-    width: 100%;
-    height: 100px;
-    padding: 5px;
-    border: 1.5px solid;
-    font-family: sans-serif;
-    color: rgb(0, 0, 0);
+	display: block;
+	width: 100%;
+	height: 100px;
+	padding: 10px; /* Increased padding */
+	border: 1.5px solid;
+	font-family: sans-serif;
+	color: rgb(0, 0, 0);
+	font-size: 16px; /* Consistent font size with other fields */
 }
 
 .input-container textarea:focus {
-    outline: none;
-    border: 1.5px solid;
+	outline: none;
+	border: 1.5px solid; /* Border color on focus */
 }
-
 .
