--- a/src/main/webapp/css/register.css
+++ b/src/main/webapp/css/register.css
@@ -1,27 +1,12 @@
 
 @charset "ISO-8859-1";
 
-body {
-    font-family: sans-serif;
-    margin: 0;
-    padding: 20px;
-    margin-top: 100px;
-    background-image: linear-gradient(to right, pink, purple);
-    background-size: cover;
-    background-repeat: no-repeat;
-  	height: 90vh;
-    display: flex;
-    flex-direction: column;
-  	
-  
- 
 
-}
 
 .container {
     background-color: white;
+    margin-left: 61%;
     padding: 30px;
-    margin-right:100px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     height: 40vh;
@@ -29,7 +14,6 @@ body {
     flex: 1;
   
 }
-
 
 h1 {
     text-align: center;
@@ -68,7 +52,7 @@ select {
 }
 
 button {
-    background-color: #449A44;
+    background-color: #0678e2;
     color: white;
     padding: 10px 20px;
     border: none;
@@ -77,5 +61,5 @@ button {
 }
 
 button:hover {
-    background-color: #449A44;
+    background-color: #0063c1;
 }
