--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,41 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                
+                    
+    
     
     
     <wb-module deploy-name="WatchWorld">
-                                
+                                        
         
-        
-        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
+                
         <dependent-module archiveName="mysql-connector-j-8.3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/C:/Users/ACER/Downloads/mysql-connector-j-8.3.0/mysql-connector-j-8.3.0/mysql-connector-j-8.3.0.jar">
+                        
             <dependency-type>uses</dependency-type>
+                    
         </dependent-module>
+                
         <dependent-module archiveName="taglibs-standard-impl-1.2.5.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/D:/Islington/2nd year/semester 2/advanced programming/tutorial/Week8taglibs1.2.5_a22df91a-17a3-4eca-8794-08dc51faa89a_93445_/taglibs-standard-impl-1.2.5.jar">
+                        
             <dependency-type>uses</dependency-type>
+                    
         </dependent-module>
+                
         <dependent-module archiveName="taglibs-standard-spec-1.2.5.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/D:/Islington/2nd year/semester 2/advanced programming/tutorial/Week8taglibs1.2.5_a22df91a-17a3-4eca-8794-08dc51faa89a_93445_/taglibs-standard-spec-1.2.5.jar">
+                        
             <dependency-type>uses</dependency-type>
+                    
         </dependent-module>
+                
         <dependent-module archiveName="tomcat-bcrypt-1.0.0.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/C:/Users/ACER/Downloads/tomcat-bcrypt-1.0.0.jar">
+                        
             <dependency-type>uses</dependency-type>
+                    
         </dependent-module>
-                                
+                                        
+        
         
         
         <property name="context-root" value="WatchWorld"/>
-                                
+                                        
+        
         
         
         <property name="java-output-path" value="/WatchWorld/build/classes"/>
-                            
+                                    
+    
     
     
     </wb-module>
-            
+                
+
 
 
 </project-modules>
